<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:id="@+id/bottom_sheet"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="#ffffff"
                                                   app:behavior_hideable="true"
                                                   app:behavior_peekHeight="0dp"
                                                   app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
            android:id="@+id/calcProcessView"
            style="@style/CalcViewStyle"
            android:text="@string/equal"
            app:layout_constraintBottom_toTopOf="@id/calcView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:id="@+id/calcView"
            style="@style/CalcViewStyle"
            android:text="@string/equal"
            app:layout_constraintBottom_toTopOf="@id/one"
            app:layout_constraintTop_toBottomOf="@id/calcProcessView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/one"
            android:text="@string/one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/two"
            app:layout_constraintTop_toBottomOf="@id/calcView"
            app:layout_constraintBottom_toTopOf="@id/four"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/two"
            android:text="@string/two"
            app:layout_constraintLeft_toRightOf="@id/one"
            app:layout_constraintRight_toLeftOf="@id/three"
            app:layout_constraintTop_toTopOf="@id/one"
            app:layout_constraintBottom_toTopOf="@id/five"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/three"
            android:text="@string/three"
            app:layout_constraintLeft_toRightOf="@id/two"
            app:layout_constraintRight_toLeftOf="@id/equal"
            app:layout_constraintTop_toTopOf="@id/one"
            app:layout_constraintBottom_toTopOf="@id/six"/>

    <TextView
            style="@style/ControlButtonStyle"
            android:id="@+id/equal"
            android:text="@string/ok"
            android:src="@drawable/ic_add"
            app:layout_constraintTop_toTopOf="@id/one"
            app:layout_constraintBottom_toTopOf="@id/next"
            app:layout_constraintLeft_toRightOf="@id/three"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            style="@style/NumberStyle"
            android:id="@+id/four"
            android:text="@string/four"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/five"
            app:layout_constraintTop_toBottomOf="@id/one"
            app:layout_constraintBottom_toTopOf="@id/seven"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/five"
            android:text="@string/five"
            app:layout_constraintLeft_toRightOf="@id/four"
            app:layout_constraintRight_toLeftOf="@id/six"
            app:layout_constraintTop_toBottomOf="@id/two"
            app:layout_constraintBottom_toTopOf="@id/eight"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/six"
            android:text="@string/six"
            app:layout_constraintLeft_toRightOf="@id/five"
            app:layout_constraintRight_toLeftOf="@id/equal"
            app:layout_constraintTop_toBottomOf="@id/three"
            app:layout_constraintBottom_toTopOf="@id/nine"/>

    <ImageView
            style="@style/ControlButtonStyle"
            android:id="@+id/next"
            android:src="@drawable/ic_down_arrow"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@id/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/nine"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            style="@style/NumberStyle"
            android:id="@+id/seven"
            android:text="@string/seven"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@id/four"
            app:layout_constraintBottom_toTopOf="@id/double_zero"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/eight"
            android:text="@string/eight"
            app:layout_constraintLeft_toRightOf="@id/seven"
            app:layout_constraintRight_toLeftOf="@id/nine"
            app:layout_constraintTop_toBottomOf="@id/five"
            app:layout_constraintBottom_toTopOf="@id/zero"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/nine"
            android:text="@string/nine"
            app:layout_constraintLeft_toRightOf="@id/eight"
            app:layout_constraintRight_toLeftOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/six"
            app:layout_constraintBottom_toTopOf="@id/remove"/>


    <TextView
            style="@style/NumberStyle"
            android:id="@+id/double_zero"
            android:text="@string/double_zero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/zero"
            app:layout_constraintTop_toBottomOf="@id/seven"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            style="@style/NumberStyle"
            android:id="@+id/zero"
            android:text="@string/zero"
            app:layout_constraintLeft_toRightOf="@id/double_zero"
            app:layout_constraintRight_toLeftOf="@id/remove"
            app:layout_constraintTop_toBottomOf="@id/eight"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            style="@style/NumberStyle"
            android:id="@+id/remove"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_delete"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:padding="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:layout_constraintLeft_toRightOf="@id/zero"
            app:layout_constraintRight_toLeftOf="@id/next"
            app:layout_constraintTop_toTopOf="@id/zero"
            app:layout_constraintBottom_toBottomOf="@id/zero"/>
</androidx.constraintlayout.widget.ConstraintLayout>